# dbxctl

./: .editorconfig  .gitignore  LICENSE  README.md  dbxctl.py  pyproject.toml
.config.example/memberships/: GRP-DATA-ANALYSTS.yaml  GRP-DATA-ENGINEERS.yaml  GRP-WORKSPACE-ADMINS.yaml
.config.example/workspaces/: production.yaml
automation-engine/: README.md  dbxctl.py
automation-engine/dbx_iam/: config_loader.py  manage_groups.py  manage_users.py  manage_workspaces.py
automation-engine/docs/: MANUAL_USUARIO.md  USER_MANUAL.md
dbx_iam/: client.py  config_loader.py  manage_groups.py  manage_memberships.py  manage_users.py  manage_workspaces.py  models.py
docs/: MANUAL_USUARIO.md  USER_MANUAL.md
identity-definitions.example/account/: settings.yaml
identity-definitions.example/memberships/business/: GRP-DATA-ENGINEERS.yaml
identity-definitions.example/principals/: groups.yaml  users.yaml
identity-definitions.example/workspace-access/: development.yaml
